--- a/Atividade 8 - Interfaces/atividade6.html
+++ b/Atividade 8 - Interfaces/atividade6.html
@@ -58,6 +58,26 @@
            
         </section>
 
+        <form name="form" id="form">
+            <fieldset>
+                <label>Entre com o seu nome:</label> <br />
+                <input class="input" type="text" name="nome" maxlength="50" size="50" required placeholder="Digite o seu nome aqui"/>
+                <br /><br />
+
+                <label>Entre com o seu e-mail:</label> <br />
+                <input class="input" type="email" name="e-mail" maxlength="50" size="50" />
+                <br /><br />
+
+                 <br />
+                <textarea placeholder="Faça o seu pedido por aqui" width="10" height="40"></textarea>
+                <br /><br />
+
+                <input type="submit" value="enviar">
+
+                
+            </fieldset>
+        </form>
+
         <section id="section4">
 
             <aside id="redes_sociais">
