--- a/Atividade 8 - Interfaces/atividade6.html
+++ b/Atividade 8 - Interfaces/atividade6.html
@@ -58,6 +58,8 @@
            
         </section>
 
+        <section id="section4">
+
         <form name="form" id="form">
             <fieldset>
                 <label>Entre com o seu nome:</label> <br />
@@ -72,13 +74,12 @@
                 <textarea placeholder="Faça o seu pedido por aqui" width="10" height="40"></textarea>
                 <br /><br />
 
-                <input type="submit" value="enviar">
+                <input id="enviar" type="submit" value="Enviar">
 
                 
             </fieldset>
         </form>
 
-        <section id="section4">
 
             <aside id="redes_sociais">
                 <p>Acesse também nossas redes sociais:</p><br/>
